Добавил отправку картинки в чате

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <!-- ChatEdit activity -->
     <string name="activity_chat_edit_activity">Добавить пользователя</string>
     <string name="plus">+</string>
+    <string name="user_name">User Name</string>
+    <string name="message_content">Message content</string>
 </resources>
