--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="plus">+</string>
     <string name="user_name">User Name</string>
     <string name="message_content">Message content</string>
+    <string name="close_button_description">Закрыть</string>
 </resources>
