--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="user_name">User Name</string>
     <string name="message_content">Message content</string>
     <string name="close_button_description">Закрыть</string>
+    <string name="title_activity_main12">MainActivity12</string>
 </resources>
